--- a/pepeizqs deals web/Plantillas/NuevoMinimo.html
+++ b/pepeizqs deals web/Plantillas/NuevoMinimo.html
@@ -27,6 +27,14 @@
             </a>
         </div>
 
+        <div style="margin-top: 20px;">
+            <a href="{{enlace}}" style="color: #f5f5f5; background-color: #0d1621; display: inline-block; user-select: none; width: 100%; padding: 6px; text-align: center; border: 0px; text-decoration: none; ">
+                <div style="display: flex; align-content: center; align-items: center; justify-content: center; font-size: 17px; margin: 15px;">
+                    {{mensaje}}
+                </div>
+            </a>
+        </div>
+
         <div style="margin-top: 40px;">
             &copy; {{año}} • <a href="https://pepeizqapps.com/" style="text-decoration: none; color: #f5f5f5;" target="_blank">pepeizq's apps</a> • <a href="https://pepeizqdeals.com/" style="text-decoration: none; color: #f5f5f5;" target="_blank">pepeizq's deals</a>
         </div>
