--- a/pepeizqs deals web/Plantillas/CambioCorreo.html
+++ b/pepeizqs deals web/Plantillas/CambioCorreo.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <div style="position: relative; display: flex; flex-direction: column; min-width: 0; word-wrap: break-word; background-color: #002033; background-clip: border-box; border: 0px; padding: 40px; font-family: 'Lato'; font-size: 16px; color: #f5f5f5;">
+    <div style="min-width: 0; word-wrap: break-word; background-color: #002033; background-clip: border-box; border: 0px; padding: 40px; font-family: 'Lato'; font-size: 16px; color: #f5f5f5;">
         <div>
             To confirm your email click on the <a href="{{codigo}}" target="_blank">following link</a>.
         </div>
