--- a/pepeizqs deals web/Plantillas/NuevaNoticia.html
+++ b/pepeizqs deals web/Plantillas/NuevaNoticia.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <div style="min-width: 0; word-wrap: break-word; background-color: #002033; background-clip: border-box; border: 0px; padding: 40px; font-family: 'Lato'; font-size: 16px; color: #f5f5f5;">
-        <div style="color: #f5f5f5; background-color: #0d1621;">
-            <div>
-                {{titulo}}
-            </div>
+        <div>
+            {{titulo}}
+        </div>
 
-            <div style="margin-top: 40px;">
+        <div style="color: #f5f5f5; background-color: #0d1621; padding: 20px; margin-top: 30px;">
+            <div>
                 <div style="display: flex; align-content: center; align-items: center; justify-content: center; font-size: 18px;">
                     <img src="{{imagen}}" style="max-width: 100%; max-height: 100%; margin-top: 10px;" />
                 </div>
@@ -20,7 +20,7 @@
                     {{contenido}}
                 </div>
             </div>
-        </div>       
+        </div>
 
         <div style="margin-top: 40px;">
             &copy; {{año}} • <a href="https://pepeizqapps.com/" style="text-decoration: none; color: #f5f5f5;" target="_blank">pepeizq's apps</a> • <a href="https://pepeizqdeals.com/" style="text-decoration: none; color: #f5f5f5;" target="_blank">pepeizq's deals</a>
