--- a/pepeizqs deals web/Plantillas/GanadorSorteo.html
+++ b/pepeizqs deals web/Plantillas/GanadorSorteo.html
@@ -12,11 +12,7 @@
 
         <div style="color: #f5f5f5; background-color: #0d1621; padding: 20px; margin-top: 30px;">
             <div>
-                <div style="display: flex; align-content: center; align-items: center; justify-content: center; font-size: 18px;">
-                    <img src="{{imagen}}" style="max-width: 100%; max-height: 100%; margin-top: 10px;" />
-                </div>
-
-                <div style="margin-top: 30px">
+                <div>
                     {{contenido}}
                 </div>
             </div>
