--- a/pepeizqs deals web/Plantillas/GanadorSorteo.html
+++ b/pepeizqs deals web/Plantillas/GanadorSorteo.html
@@ -13,7 +13,7 @@
         <div style="color: #f5f5f5; background-color: #0d1621; padding: 20px; margin-top: 30px;">
             <div>
                 <div>
-                    {{contenido}}
+                    {{clave}}
                 </div>
             </div>
         </div>
