--- a/pepeizqs deals web/Plantillas/NuevaNoticiaConEnlace.html
+++ b/pepeizqs deals web/Plantillas/NuevaNoticiaConEnlace.html
@@ -11,7 +11,7 @@
         </div>
 
         <div style="margin-top: 40px;">
-            <a href="{{enlace}}" style="color: #f5f5f5; background-color: #0d1621; display: inline-block; user-select: none; width: 100%; padding: 6px; text-align: left; font-size: 16px; border: 0px; text-decoration: none; ">
+            <a href="{{enlace}}" style="color: #f5f5f5; user-select: none; width: 100%; text-align: left; font-size: 16px; text-decoration: none; ">
                 <div style="color: #f5f5f5; background-color: #0d1621; padding: 20px;">
                     <div>
                         <div style="display: flex; align-content: center; align-items: center; justify-content: center; font-size: 18px;">
